# nlp

./: README.md  pip-selfcheck.json  test.py
brett/ex1/: CMakeLists.txt  ex1lib.cc  ex1lib.h  ex1maputil.cc  ex1maputil.h  get_low_frequency_words.cc  readme.md  replace_low_frequency_words.cc  simple_tagger.cc  viterbi_tagger.cc  viterbi_tagger_test.cc
h1-p/simple_tagger/: replace_rare.py  simple_tagger.py
h1-p/viterbi_tagger/: gene.counts  replace_rare_use_classes.py  viterbi_tagger.py
h2-p/: count_cfg_freq.py  parse_test.p3.out  parser.py  pretty_print_tree.py  processing_data.py  solution.py
h2-p/h2-js/: cfg.counts  count_freq.js  package.json  pretty_print.js  replace_rare_tree.js
js-h1-p/simple_tagger/: replace_rare.js  simple_tagger.js
js-h1-p/viterbi_tagger/: replace_rare_classes.js  viterbi_tagger.js
js-h2-p/: count_freq.js  package.json
nlp_projects/h1-p/simple_tagger/: simple_tagger.py
nlp_projects/h1-p/viterbi_tagger/: viterbi_tagger.py
nlp_projects/js-h1-p/: gene.dev  gene.key  gene.test
nlp_projects/js-h1-p/viterbi_tagger/: replace_rare_classes.js
